Update README.md with build and run scripts for easier project management